# ComfyUI-ricing

./: __init__.py  pyproject.toml  user.css
web/: interface.js  solomode.js
